Migrated CalculatorControllerDeleteTest to MockMvc